--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Aileen & Justin</title>
+    <title>Aileen & Justin's Wedding</title>
+    <meta property="og:image" content="%PUBLIC_URL%/assets/images/wedding_thumbnail.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display" rel="stylesheet">
   </head>
   <body>
